Started implementing chat encryption

--- a/assets/php/composer.json
+++ b/assets/php/composer.json
@@ -1,7 +1,7 @@
 {
     "autoload": {
         "psr-4": {
-            "Websocket\\": "src"
+            "Websocket\\": "Chatserver/src"
         }
     },
     "require": {
