--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-__pycache__
-database/*
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vscode
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+.env
