--- a/package.json
+++ b/package.json
@@ -12,30 +12,36 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.1.2",
         "browser-sync": "^2.24.5",
         "browser-sync-webpack-plugin": "2.0.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^2.0",
+        "laravel-mix": "^2.1.11",
         "lodash": "^4.17.4",
         "popper.js": "^1.12",
         "vue": "^2.5.7"
     },
     "dependencies": {
         "adminlte": "^2.4.1",
+        "autoprefixer": "^8.6.5",
+        "css-loader": "^1.0.0",
         "express": "^4.16.3",
         "fastclick": "^1.0.6",
         "ionicons": "^4.2.4",
         "jquery-migrate": "^3.0.1",
         "jquery-slimscroll": "^1.3.8",
         "laravel-echo": "^1.4.0",
-        "openpgp": "^3.0.11",
+        "openpgp": "^3.0.13",
         "redis": "^2.8.0",
         "socket.io": "^2.1.1",
         "socket.io-client": "^2.1.1",
         "sqlite3": "^4.0.1",
+        "style-loader": "^0.21.0",
         "sw-precache-webpack-plugin": "^0.11.5",
-        "ws": "^5.2.1"
+        "ts-loader": "^4.4.2",
+        "typescript": "^2.9.2",
+        "webpack": "^3.11.0",
+        "webpack-cli": "^3.0.8"
     }
 }
