--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "browser-sync": "^2.24.5",
         "browser-sync-webpack-plugin": "2.0.1",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
+        "jquery": "^3.3.1",
         "laravel-mix": "^2.1.11",
         "lodash": "^4.17.4",
         "popper.js": "^1.12",
@@ -24,14 +24,18 @@
     },
     "dependencies": {
         "autoprefixer": "^8.6.5",
+        "bootstrap3-wysihtml5-npm": "^0.3.3-npm.12",
         "css-loader": "^1.0.0",
         "express": "^4.16.3",
         "fastclick": "^1.0.6",
         "ionicons": "^4.2.4",
         "jquery-migrate": "^3.0.1",
         "jquery-slimscroll": "^1.3.8",
+        "jquery-ui-bundle": "^1.12.1-migrate",
         "laravel-echo": "^1.4.0",
+        "moment": "^2.22.2",
         "openpgp": "^3.0.13",
+        "rangy": "^1.3.0",
         "redis": "^2.8.0",
         "socket.io": "^2.1.1",
         "socket.io-client": "^2.1.1",
