--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/passport": "^6.0",
+        "laravel/framework": "5.6.*"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
