--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "optimus/heimdal": "~1.0",
         "laravel/passport": "^3.0",
         "optimus/api-consumer": "0.2.*",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "cboden/ratchet": "^0.4.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
