--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "mocha": "mocha test/ --recursive --exit"
   },
   "dependencies": {
+    "@feathersjs/authentication": "^2.1.11",
+    "@feathersjs/authentication-jwt": "^2.0.5",
+    "@feathersjs/authentication-local": "^1.2.5",
     "@feathersjs/configuration": "^2.0.4",
     "@feathersjs/errors": "^3.3.4",
     "@feathersjs/express": "^1.2.7",
@@ -36,7 +39,10 @@
     "@feathersjs/socketio": "^3.2.6",
     "compression": "^1.7.3",
     "cors": "^2.8.4",
+    "feathers-sequelize": "^3.1.2",
     "helmet": "^3.14.0",
+    "mysql2": "^1.6.1",
+    "sequelize": "^4.41.0",
     "serve-favicon": "^2.5.0",
     "winston": "^3.1.0"
   },
